--- a/src/app/tareas/tareas.component.html
+++ b/src/app/tareas/tareas.component.html
@@ -1,16 +1,27 @@
 <div class="container">
     <div class="mb-3">
         <label for="" class="form-label">cosas anadir</label>
-        <input type="text" name="" id="" class="form-control" placeholder="" aria-describedby="helpId"><button class="btn btn-dark"> buscar</button>
+        <input type="text" name="" id="" class="form-control" placeholder="" aria-describedby="helpId" [(ngModel)]="tareas.description"><button class="btn btn-dark" (click)="agregarTarea()"> agregar</button>
         <small id="helpId" class="text-muted">Help text</small>
       </div>
-      <ng-container *ngFor="let lista of listaTareas">
+      <ng-container *ngFor="let lista of listaTareas;let indice=index">
           <ul class="list-group list-group-numbered">
+            <li>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"  [(ngModel)]="lista.status" (change)="actualizarEstado(lista.id,indice)">
+                    <label class="form-check-label" for="flexCheckDefault">
+                         terminada
+                    </label>
+                  </div>
+            </li>
               <li class="list-group-item">{{lista.description}}</li>
-             
-          </ul>
+              <button (click)="eliminarTarea(lista.id)" class="btn btn-danger">
+                eliminar
+             </button>
+            </ul>
+        
         
             
       </ng-container>
-      
+      Tareas Terminadas {{numero}}
 </div>
